<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbackground"
    tools:context=".auth.SignUpActivity">

    <TextView
        android:id="@+id/tVWelcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text="@string/welcome_here_signup_to_continue"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="55dp"
        app:startIconDrawable="@drawable/user_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTName"
            android:paddingStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textColor="@color/blue"
            android:hint="@string/enter_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/baseline_mail_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:paddingStart="50dp"
            android:textStyle="normal"
            app:hintTextColor="@color/black"
            android:textColor="@color/blue"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/username_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTUsername"
            android:paddingStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textStyle="normal"
            android:hint="@string/enter_username_unique" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/icons8_key"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTPassword"
            android:paddingStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textStyle="normal"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/i_accept_all_t_amp_c" />
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/b612_mono_bold_italic"
        android:text="@string/sign_up"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignInText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/blue"
        android:layout_marginTop="10dp"
        android:text="Have a account ? Login Here !" />


</LinearLayout>