<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbackground"
    tools:context=".auth.LoginActivity">

    <TextView
        android:id="@+id/tVWelcome"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:fontFamily="casual"
        android:text="@string/welcome_login_to_continue"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/yellow"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="150dp"
        app:startIconDrawable="@drawable/username_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTUsernameLogin"
            android:paddingStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/blue"
            android:textStyle="normal"
            android:hint="@string/enter_username_unique" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/yellow"
        android:layout_marginTop="10dp"
        app:startIconDrawable="@drawable/icons8_key"
        app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eTPasswordLogin"
            android:paddingStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@color/yellow"
            android:textStyle="normal"
            android:hint="@string/enter_password" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/b612_mono_bold_italic"
        android:text="@string/login"
        android:textStyle="bold" />

</LinearLayout>